LendInvestApplicationTask/force-app/main/default/objects/SMS_Log__c/SMS_Log__c.object-meta.xml
<CustomObject>
    <description>SMS log records to view SMS that have been sent</description>
    <label>SMS Log</label>
    <nameField>
        <label>SMS Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>