LendInvestApplicationTask/force-app/main/default/objects/SMS_Log__c/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <description>Phone number the SMS was sent from</description>
    <label>From Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>