LendInvestApplicationTask/force-app/main/default/objects/SMS_Log__c/fields/SMS_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body__c</fullName>
    <description>Message body of SMS</description>
    <label>SMS Body</label>
    <type>TextArea</type>
</CustomField>