LendInvestApplicationTask/force-app/main/default/objects/SMS_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status is Passed if accepted by Twillio otherwise Status is Failed</description>
    <label>Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>