LendInvestApplicationTask/force-app/main/default/objects/SMS_Log__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <description>SMS number text was sent to</description>
    <label>To Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>